[project]
name = "eng-paresmoedas-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Alves",email = "lucasalves_taz@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "flask-apscheduler (>=1.13.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
